@@ -1,5 +1,7 @@
 1.3.2 (Pending)
 * Changed: Upgraded to Rubyforge 1.0.0.
+* Changed: BUILDR-88 Test classes/resources should come before compile
+classes/resources so they load up earlier in java classpath.
 * Fixed: BUILDR-77: Layout feature not working.
 * Fixed: BUILDR-76: Added more specs and fixes to compile task.
 * Fixed: BUILDR-80: Fix reference to Util#timestamp method on nailgun addon.
